# statmon

./: .gitignore  Control.py  Model.py  README.md  View.py  pyproject.toml  setup.cfg  statmon.py
plugins/: Adc.py  Airmass.py  Alarm.py  AoShutter.py  AzEl.py  Brightness.py  Cal.py  CalPlugin.py  Calprobe.py  CalprobePlugin.py  CanvasLabel.py  CellCover.py  CustomLabel.py  Debug.py  DomeShutter.py  Domeff.py  DomeffPlugin.py  DomeffVolt.py  DomeffWatt.py  Dummy.py  El.py  EnvMon.py  EnvMon2.py  EnvMon2Plugin.py  EnvMon3.py  EnvMon4.py  EnvMon5.py  EnvMonPlugin.py  Exptime.py  Focus.py  FocusZ.py  GuidingError.py  GuidingImage.py  GuidingImagePlugin.py  ImgRot.py  InsName.py  InsRot.py  Limit.py  LimitPlugin.py  M1Cover.py  (+37 more)
scripts/: envmon  guidemon  statmon  statmon2
statmon/: Control.py  Model.py  View.py
statmon/plugins/: Adc.py  Airmass.py  Alarm.py  AoShutter.py  AzEl.py  Cal.py  CalPlugin.py  CalprobePlugin.py  CellCover.py  CustomLabel.py  CustomPlot.py  DomeShutter.py  DomeffPlugin.py  DomeffVolt.py  Dummy.py  El.py  EnvMon.py  EnvMon2.py  EnvMon3.py  EnvMon4.py  EnvMon5.py  Exptime.py  Focus.py  FocusZ.py  GuidingError.py  GuidingImage.py  ImgRot.py  InsName.py  InsRot.py  Limit.py  LimitPlugin.py  M1Cover.py  M2.py  M3.py  PlBase.py  Plot.py  PlotPlugin.py  Precip.py  PrecipPlugin.py  RaDec.py  (+21 more)
statmon/util/: xy_scatter.py
