[build-system]
requires = ["setuptools>=64",
            "setuptools_scm[toml]>=7",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statmon"
description = "This is the StatMon telescope status monitoring GUI for Subaru Telescope."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Software Division, Subaru Telescope, NAOJ", email = "ocs@naoj.org"}]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "pyyaml>=5.3.1",
    "matplotlib>=3.4",
    "ginga>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
zip-safe = false
include-package-data = false
script-files = [
    "scripts/statmon",
    "scripts/statmon2",
    "scripts/guidemon",
    "scripts/envmon",
]

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]
write_to = "statmon/version.py"
version_scheme = "release-branch-semver"

[tool.ruff]
# match the historical flake8 line length
line-length = 79

[tool.ruff.lint]
# pycodestyle (E/W) + pyflakes (F), to mirror the previous flake8 setup
select = ["E", "W", "F"]
# Ignoring these (carried over from the old [flake8] config):
# E265: block comment should start with '#'
# E266: too many leading '#' for block comment
# E402: module level import not at top of file
# E501: line too long
# E741: ambiguous variable name 'l'
# F841: local variable is assigned to but never used
# E401: multiple imports on one line
ignore = ["E265", "E266", "E402", "E501", "E741", "F841", "E401"]
